# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "sec.kconfig",
    srcs = glob([
        "Kconfig",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)

kernel_module(
    name = "sec",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]) + [
        "//private/google-modules/touch/common:headers",
        "//private/google-modules/display:headers",
        "//private/google-modules/display/include:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "sec_touch.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/touch/common:touch.common",
    ],
)
